package cz.tondracek.inqooltennis.user.model;

public enum UserRole {
    ADMIN,
    USER,
}
